tests/baselines/reference/stringIndexerAssignments1.errors.txt
stringIndexerAssignments1.ts(5,1): error TS2322: Type '{ one: number; two: string; }' is not assignable to type '{ [index: string]: string; one: string; }'.
  Types of property 'one' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== stringIndexerAssignments1.ts (1 errors) ====
    var x: { [index: string]: string; one: string; };
    var a: { one: string; };
    var b: { one: number; two: string; };
    x = a;
    x = b; // error
    ~
!!! error TS2322: Type '{ one: number; two: string; }' is not assignable to type '{ [index: string]: string; one: string; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    